--- a/DInterfaz/Practica5/styles.css
+++ b/DInterfaz/Practica5/styles.css
@@ -1,9 +1,34 @@
 
+body {
+    box-sizing: border-box;
+}
 .card {
     text-align: center;
     background-color: white;
-    padding: 10px;
-    margin: 300px;
+    padding: 50px;
+    margin-left: 500px;
+    margin-right: 500px;
     box-shadow: 10px 10px 5px rgb(202, 202, 202);
     border: 1px solid rgb(209, 209, 209);
 }
+
+.avatar {
+    border-radius: 50%;
+    width: 150px;
+}
+
+.name {
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.bio {
+    padding: 10px;
+}
+
+.btn {
+    text-align: center;
+    padding: 5px;
+    border-radius: 10px;
+}
+button:hover { background-color: rgb(99, 123, 241)}
